--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -40,7 +41,7 @@ body {
   padding: 15px 25px 15px 25px;
 }
 
-nav {
+.header {
   background-color: #4c4c4c;
   display: flex;
   justify-content: flex-end;
@@ -48,7 +49,7 @@ nav {
   box-shadow: 1px 2px 3px 0px grey;
 }
 
-nav a {
+.header a {
   padding: 5px;
   text-transform: uppercase;
   text-decoration: none;
@@ -56,12 +57,11 @@ nav a {
   opacity: 0.9;
 }
 
-nav a:hover {
+.header a:hover {
   opacity: 1;
 }
 
 .content-container .row {
-  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -136,4 +136,19 @@ footer {
 #side-bar a:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+h1 {
+  color: white;
+  font-size: 22px;
+  margin: 0px;
+}
+
+h2 {
+  font-size: 22px;
+  margin: 0px;
+}
+
+nav {
+  display: flex;
 }
