--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.main {
+#main {
   width: 100%;
   height: 100%;
 }
@@ -90,7 +90,7 @@ footer {
   width: 100%;
 }
 
-.buffer {
+#buffer {
   margin: 10px;
 }
 
@@ -109,10 +109,12 @@ footer {
 
 .content-container caption {
   border: 1px solid black;
+  border-radius: 5px;
   margin: 5px;
   padding: 5px;
   font-size: 20px;
   background-color: #ececec;
+  text-shadow: 2px 2px #cccccc;
 }
 
 #side-bar {
